[gd_scene load_steps=4 format=3 uid="uid://bi0of34x54tuj"]

[ext_resource type="Theme" uid="uid://0f7l5qrjhqko" path="res://main/ui/theme/main_theme.tres" id="1_c7i7v"]
[ext_resource type="PackedScene" uid="uid://bas8dro3pk1ia" path="res://main/ui/components/element_icon/ElementIcon.tscn" id="2_6aftj"]
[ext_resource type="Script" path="res://main/ui/components/action_handler/action_button/action_button.gd" id="2_psr0f"]

[node name="ActionButton" type="Button"]
custom_minimum_size = Vector2(128, 15)
offset_right = 106.0
offset_bottom = 14.0
theme = ExtResource("1_c7i7v")
script = ExtResource("2_psr0f")
hp_color = Color(1, 1, 1, 1)
sp_color = Color(1, 0.25098, 0.376471, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 14.0
grow_horizontal = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 1
theme_override_constants/margin_right = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 3

[node name="AffinityIcon" parent="MarginContainer/HBoxContainer" instance=ExtResource("2_6aftj")]
unique_name_in_owner = true
layout_mode = 2

[node name="NameLabel" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/line_spacing = 1
text = "Agi"

[node name="CostLabel" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 10
theme_override_constants/line_spacing = 1
text = "999m"
horizontal_alignment = 2
vertical_alignment = 1

[node name="CoverContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 1
theme_override_constants/margin_top = 1
theme_override_constants/margin_right = 1
theme_override_constants/margin_bottom = 1

[node name="DisabledCover" type="ColorRect" parent="CoverContainer"]
unique_name_in_owner = true
layout_mode = 2
color = Color(0, 0, 0, 0.607843)
